"""init

Revision ID: 681f09ccb375
Revises:
Create Date: 2025-01-29 09:21:34.188236

"""

import sqlmodel
from typing import Sequence, Union
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = "681f09ccb375"
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "message",
        sa.Column("deleted", sa.Boolean(), nullable=False),
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("content", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "user",
        sa.Column("deleted", sa.Boolean(), nullable=False),
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("username", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("is_active", sa.Boolean(), nullable=False),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("username"),
    )
    op.create_table(
        "chat",
        sa.Column("deleted", sa.Boolean(), nullable=False),
        sa.Column("owner_id", sa.Uuid(), nullable=False),
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("name", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("is_private", sa.Boolean(), nullable=False),
        sa.ForeignKeyConstraint(["owner_id"], ["user.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("name"),
    )
    op.create_table(
        "file",
        sa.Column("deleted", sa.Boolean(), nullable=False),
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("owner_id", sa.Uuid(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("filename", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("content", sa.LargeBinary(), nullable=False),
        sa.ForeignKeyConstraint(["owner_id"], ["user.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "user_message",
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("message_id", sa.Uuid(), nullable=False),
        sa.Column("user_id", sa.Uuid(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.ForeignKeyConstraint(["message_id"], ["message.id"], ondelete="CASCADE"),
        sa.ForeignKeyConstraint(["user_id"], ["user.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("user_id", "message_id", name="user_message_unique"),
    )
    op.create_index("ix_user_message_message_id", "user_message", ["message_id"], unique=False)
    op.create_index("ix_user_message_user_id", "user_message", ["user_id"], unique=False)
    op.create_table(
        "chat_file",
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("chat_id", sa.Uuid(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("file_id", sa.Uuid(), nullable=False),
        sa.ForeignKeyConstraint(["chat_id"], ["chat.id"], ondelete="CASCADE"),
        sa.ForeignKeyConstraint(["file_id"], ["file.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("chat_id", "file_id", name="chat_file_unique"),
    )
    op.create_index("ix_chat_file_chat_id", "chat_file", ["chat_id"], unique=False)
    op.create_index("ix_chat_file_file_id", "chat_file", ["file_id"], unique=False)
    op.create_table(
        "chat_invite",
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("chat_id", sa.Uuid(), nullable=False),
        sa.Column("inviter_id", sa.Uuid(), nullable=False),
        sa.Column("token", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("is_accepted", sa.Boolean(), nullable=False),
        sa.ForeignKeyConstraint(["chat_id"], ["chat.id"]),
        sa.ForeignKeyConstraint(["inviter_id"], ["user.id"]),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("token"),
    )
    op.create_index("ix_chat_invite_token", "chat_invite", ["token"], unique=False)
    op.create_table(
        "chat_message",
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("message_id", sa.Uuid(), nullable=False),
        sa.Column("chat_id", sa.Uuid(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.ForeignKeyConstraint(["chat_id"], ["chat.id"], ondelete="CASCADE"),
        sa.ForeignKeyConstraint(["message_id"], ["message.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("chat_id", "message_id", name="chat_message_unique"),
    )
    op.create_index("ix_chat_message_chat_id", "chat_message", ["chat_id"], unique=False)
    op.create_index("ix_chat_message_message_id", "chat_message", ["message_id"], unique=False)
    op.create_table(
        "user_chat",
        sa.Column("last_seen", sa.DateTime(), nullable=False),
        sa.Column("created_at", sa.DateTime(), nullable=False),
        sa.Column("chat_id", sa.Uuid(), nullable=False),
        sa.Column("user_id", sa.Uuid(), nullable=False),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.ForeignKeyConstraint(["chat_id"], ["chat.id"], ondelete="CASCADE"),
        sa.ForeignKeyConstraint(["user_id"], ["user.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("user_id", "chat_id", name="user_chat_unique"),
    )
    op.create_index("ix_user_chat_chat_id", "user_chat", ["chat_id"], unique=False)
    op.create_index("ix_user_chat_user_id", "user_chat", ["user_id"], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index("ix_user_chat_user_id", table_name="user_chat")
    op.drop_index("ix_user_chat_chat_id", table_name="user_chat")
    op.drop_table("user_chat")
    op.drop_index("ix_chat_message_message_id", table_name="chat_message")
    op.drop_index("ix_chat_message_chat_id", table_name="chat_message")
    op.drop_table("chat_message")
    op.drop_index("ix_chat_invite_token", table_name="chat_invite")
    op.drop_table("chat_invite")
    op.drop_index("ix_chat_file_file_id", table_name="chat_file")
    op.drop_index("ix_chat_file_chat_id", table_name="chat_file")
    op.drop_table("chat_file")
    op.drop_index("ix_user_message_user_id", table_name="user_message")
    op.drop_index("ix_user_message_message_id", table_name="user_message")
    op.drop_table("user_message")
    op.drop_table("file")
    op.drop_table("chat")
    op.drop_table("user")
    op.drop_table("message")
    # ### end Alembic commands ###
